# dloopdetector_ros

./: README.md
dbow2/: CMakeLists.txt  package.xml
dloopdetector/: CMakeLists.txt  CMakeLists.txt.old  dloopdetector.launch  package.xml
dloopdetector/demo/: demoDetector.h  demoDetectorStereo.h  demo_brief.cpp  demo_brief_stereo.cpp
dloopdetector/include/CamMotionEstimator/: CamMotionEstimator.h  VisoStereo.h
dloopdetector/include/DLoopDetector/: DLoopDetector.h  TemplatedLoopDetector.h
dloopdetector/launch/: dloopdetector.launch
dloopdetector_ros/: CMakeLists.txt  package.xml
